--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     tools:context="com.eric.quizme.MainActivity">
     <TextView
+        android:id="@+id/activity_main_greeting_txt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -14,12 +15,14 @@
         android:padding="20dp"
         android:text="Bienvenue dans QuizMe" />
     <EditText
+        android:id="@+id/activity_main_name_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:hint="Please type your name"/>
     <Button
+        android:id="@+id/activity_main_play_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Let's click"
