--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="@color/colorAccent"
+        android:background="@color/colorLightBlue"
         android:padding="20dp"
         android:text="Bienvenue dans QuizMe" />
     <EditText
@@ -20,7 +20,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:hint="Please type your name"/>
+        android:hint="Please type your name"
+        android:textAlignment="center"/>
     <Button
         android:id="@+id/activity_main_play_btn"
         android:layout_width="wrap_content"
