--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -18,7 +18,7 @@
         android:layout_marginEnd="15dp"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:layout_gravity="center"
+        android:gravity="center"
         android:textAlignment="center"
         android:text="Question?">
     </TextView>
