--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.eric.quizme.MainActivity">
+    tools:context="com.eric.quizme.controller.MainActivity">
     <TextView
         android:id="@+id/activity_main_greeting_txt"
         android:layout_width="match_parent"
